@@ -20,6 +20,11 @@
 <A HREF="iTerm.app.sitx">Recent CVS build</A><BR>
 </UL>
 
+<FONT SIZE="5"><STRONG>Donation:</STRONG></FONT><BR>
+<UL>
+<A HREF="http://sourceforge.net/donate/index.php?group_id=67789">Support iTerm</A><BR>
+</UL>
+
 <FONT SIZE="5"><STRONG>Links:</STRONG></FONT><BR>
 <UL>
 <A HREF="http://sourceforge.net/projects/iterm/">iTerm (sourceforge project page)</A><BR>
@@ -30,3 +35,4 @@
 <IMG SRC="http://sourceforge.net/sflogo.php?group_id=67789&amp;type=2" WIDTH="125" HEIGHT="37" BORDER="0" ALT="SourceForge Logo">
 </A>
 </UL>
+
